feat: Added color variants block in PDP

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -8,6 +8,13 @@
  * ------------------------------------------------------------
  */
 {
+  "riviera": {
+    "snippets": {
+      "product-variants": {
+        "color_prefix": "Color"
+      }
+    }
+  },
   "general": {
     "page": "Page {{ page }}",
     "home": "Home",
